--- a/client/src/components/PhoneNumber/style.css
+++ b/client/src/components/PhoneNumber/style.css
@@ -1,4 +1,4 @@
-
+/* 
 react-tel-input input[type=tel],
 .react-tel-input input[type=text] {
     position: relative;
@@ -16,4 +16,4 @@ react-tel-input input[type=tel],
     height: 35px;
     width: 100%;
     outline: none;
-}
+} */
